--- a/demos/test-cdn/public/demo.esm.html
+++ b/demos/test-cdn/public/demo.esm.html
@@ -16,6 +16,7 @@
         "@moralisweb3/evm-connector-utils": "../../../packages/evmConnectors/EvmConnectorUtils/dist/index.esm.js",
         "@moralisweb3/evm-metamask-connector": "../../../packages/evmConnectors/EvmMetamaskConnector/dist/index.esm.js",
         "@moralisweb3/evm-wallet-connect-connector": "../../../packages/evmConnectors/EvmWalletconnectConnector/dist/index.esm.js",
+        "@moralisweb3/evm-magic-link-connector": "../../../packages/evmConnectors/EvmMagiclinkConnector/dist/index.esm.js",
         "moralis": "../../../packages/moralis/dist/index.esm.js"
       }
     }
@@ -23,8 +24,10 @@
   <script type="module">
     import Moralis from 'moralis';
     import WalletConnectConnector from '@moralisweb3/evm-wallet-connect-connector';
+    import EvmMagiclinkConnector from '@moralisweb3/evm-magic-link-connector';
     window.Moralis = Moralis;
     window.WalletConnectConnector = WalletConnectConnector;
+    window.EvmMagiclinkConnector = EvmMagiclinkConnector;
   </script>
   <script src="./env.js"></script>
   <script src="./demo.js"></script>
