change output name

--- a/demos/test-cdn/public/demo.esm.html
+++ b/demos/test-cdn/public/demo.esm.html
@@ -24,10 +24,10 @@
   <script type="module">
     import Moralis from 'moralis';
     import WalletConnectConnector from '@moralisweb3/evm-wallet-connect-connector';
-    import EvmMagiclinkConnector from '@moralisweb3/evm-magic-link-connector';
+    import MagiclinkConnector from '@moralisweb3/evm-magic-link-connector';
     window.Moralis = Moralis;
     window.WalletConnectConnector = WalletConnectConnector;
-    window.EvmMagiclinkConnector = EvmMagiclinkConnector;
+    window.MagiclinkConnector = MagiclinkConnector;
   </script>
   <script src="./env.js"></script>
   <script src="./demo.js"></script>
