--- a/demos/test-cdn/public/demo.umd.html
+++ b/demos/test-cdn/public/demo.umd.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Demo - Moralis Test CDN</title>
+  <title>🔵 UMD Demo - Moralis Test CDN</title>
 
   <script src="../../../packages/moralis/dist/index.umd.js"></script>
   <script src="../../../packages/evmConnectors/EvmWalletconnectConnector/dist/index.umd.js"></script>
