fix(evmConnector): fix modal infinite loop

--- a/demos/test-cdn/public/demo.esm.html
+++ b/demos/test-cdn/public/demo.esm.html
@@ -27,7 +27,7 @@
     import Web3AuthConnector from '@moralisweb3/evm-web3auth-connector';
     window.Moralis = Moralis;
     window.WalletConnectConnector = WalletConnectConnector;
-    // window.Web3AuthConnector = Web3AuthConnector;
+    window.Web3AuthConnector = Web3AuthConnector;
   </script>
   <script src="./env.js"></script>
   <script src="./demo.js"></script>
