--- a/demos/demo-parse-server-auth/public/index.html
+++ b/demos/demo-parse-server-auth/public/index.html
@@ -7,7 +7,7 @@
     <title>Demo Auth parse-server</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../../../../packages/moralis/dist/index.umd.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
   </head>
   <body>
     <header>
