--- a/demos/demo-parse-server-auth/public/index.html
+++ b/demos/demo-parse-server-auth/public/index.html
@@ -14,6 +14,7 @@
       <h1>Demo Auth parse-server</h1>
     </header>
     <main>
+      <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
       <div id="user"></div>
     </main>
