--- a/demos/demo-supabase-auth/public/index.html
+++ b/demos/demo-supabase-auth/public/index.html
@@ -16,6 +16,7 @@
     <main>
       <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
+      <button class="btn" id="login">Login after email verification</button>
       <div id="user"></div>
     </main>
 
