--- a/demos/demo-supabase-auth/public/index.html
+++ b/demos/demo-supabase-auth/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js"></script>
   </head>
   <body>
     <header>
@@ -16,7 +17,7 @@
     <main>
       <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
-      <button class="btn" id="login">Get user after authentication</button>
+      <button class="btn" id="getUser">Get user after authentication</button>
       <div id="user"></div>
     </main>
 
