--- a/demos/demo-supabase-auth/public/index.html
+++ b/demos/demo-supabase-auth/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo Auth parse-server</title>
+    <title>Demo Auth Supabase</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
@@ -12,12 +12,12 @@
   </head>
   <body>
     <header>
-      <h1>Demo Supabase parse-server</h1>
+      <h1>Demo Auth Supabase</h1>
     </header>
     <main>
       <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
-      <button class="btn" id="getUser">Get user after authentication</button>
+      <button class="btn" id="getUser">Get users</button>
       <div id="user"></div>
     </main>
 
