feat(demo): expresss proxy

--- a/demos/parse-server/public/index.html
+++ b/demos/parse-server/public/index.html
@@ -16,6 +16,8 @@
     <main>
       <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
+      <button class="btn" id="evm-version">web3api version</button>
+      <button class="btn" id="evm-native-balance">get native balance</button>
       <div id="user"></div>
     </main>
 
