--- a/demos/firebase-proxy/hosting/index.html
+++ b/demos/firebase-proxy/hosting/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💈 Firebase Moralis API Proxy Demo</title>
+  <style>
+    body {font: 16px/1em Arial, Verdana, Tahoma, serif;}
+  </style>
 </head>
 <body>
   <h1>💈 Firebase Moralis API Proxy Demo</h1>
