--- a/demos/firebase-auth/hosting/index.html
+++ b/demos/firebase-auth/hosting/index.html
@@ -4,21 +4,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🔒 Firebase Moralis Auth Demo</title>
+  <style>
+    body {font: 16px/1.3em Arial, Verdana, Tahoma, serif;}
+  </style>
 </head>
 <body>
   <h1>🔒 Firebase Moralis Auth Demo</h1>
 
   <p>This is a simple demo of Moralis Auth integrated with Firebase Auth.</p>
 
-  <p>User: <strong id="currentUser">⛔ not authorized</strong></p>
+  <p>User: <strong id="currentUser">⛔ unauthorized</strong></p>
 
   <h4>Authorization</h4>
 
   <button id="authorizeButton">Connect with MetaMask 🔒</button>
 
-  <h4>Secured Functions</h4>
+  <h4>Authorized User Only</h4>
 
-  <button id="getNFTMetadataButton">getNFTMetadata 🦋</button>
+  <button id="getSecretDataButton">getSecretData 🔥</button>
+
+  <h4>Everyone</h4>
+
   <button id="getTimeButton">getTime ⏰</button>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.6.9/dist/ethers.umd.js"></script>
