fix: firebase demos polished.

--- a/demos/firebase-auth/hosting/index.html
+++ b/demos/firebase-auth/hosting/index.html
@@ -13,13 +13,13 @@
 
   <p>This is a simple demo of Moralis Auth integrated with Firebase Auth.</p>
 
-  <p>User: <strong id="currentUser">⛔ unauthorized</strong></p>
+  <p>User: <strong id="currentUser">⛔ guest</strong></p>
 
-  <h4>Authorization</h4>
+  <h4>Authentication</h4>
 
-  <button id="authorizeButton">Connect with MetaMask 🔒</button>
+  <button id="authenticateButton">Connect with MetaMask 🔒</button>
 
-  <h4>Authorized User Only</h4>
+  <h4>Authorized Users Only</h4>
 
   <button id="getSecretDataButton">getSecretData 🔥</button>
 
