correct stored id and add anon request

--- a/demos/demo-supabase-auth/public/index.html
+++ b/demos/demo-supabase-auth/public/index.html
@@ -17,7 +17,8 @@
     <main>
       <div id="error"></div>
       <button class="btn" id="auth-metamask">Authenticate via Metamask</button>
-      <button class="btn" id="getUser">Get users</button>
+      <button class="btn" id="getUser">Get users as authenticated user</button>
+      <button class="btn" id="getUserAnon">Get users as anon user</button>
       <div id="user"></div>
     </main>
 
