upgrade api method names for demos.

--- a/demos/firebase-proxy/hosting/index.html
+++ b/demos/firebase-proxy/hosting/index.html
@@ -23,7 +23,7 @@
 
     <button id="getBlockButton">getBlock 🚀</button>
     <button id="runContractFunctionButton">runContractFunction 🚀</button>
-    <button id="getNFTMetadataButton">getNFTMetadata 🚀</button>
+    <button id="getNFTContractMetadataButton">getNFTContractMetadata 🚀</button>
     <button id="web3ApiVersionButton">web3ApiVersion 🚀</button>
 
     <h4>Solana Proxy</h4>
