--- a/demos/firebase-auth-ext/hosting/public/index.html
+++ b/demos/firebase-auth-ext/hosting/public/index.html
@@ -7,6 +7,10 @@
     <style>
       body {
         font: 14px/1.4em Arial, Verdana, Tahoma, Serif;
+        text-align: center;
+      }
+      button {
+        margin: 0 5px;
       }
     </style>
   </head>
