--- a/demos/firebase-streams-ext/hosting/index.html
+++ b/demos/firebase-streams-ext/hosting/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>⚡ Firebase Moralis Streams Demo</title>
+    <title>⚡ Moralis Streams for Firebase Demo</title>
     <style>
       body {
         font: 16px/1em Arial, Verdana, Tahoma, serif;
@@ -31,13 +31,13 @@
     </style>
   </head>
   <body>
-    <h1>⚡ Firebase Moralis Streams Demo</h1>
+    <h1>⚡ Moralis Streams for Firebase Demo</h1>
 
-    <h4>Native Transactions</h4>
+    <h4>New Native Transactions</h4>
 
     <div id="transactions">Waiting...</div>
 
-    <h4>ERC20 Transfers</h4>
+    <h4>New ERC20 Transfers</h4>
 
     <div id="erc20Transfers">Waiting...</div>
 
