--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -40,11 +40,27 @@
       <strong id="userBalance"></strong>
     </p>
 
+    <h4>Authenticate</h4>
+
     <p>
-      <button class="button" data-action="signInByMetaMask">Sign In By MetaMask ⚽</button> |
-      <button class="button" data-action="signInByWalletConnect">Sign In By WalletConnect ⚾</button> |
-      <button class="button" data-action="signInByPhantom">Sign In By Phantom 🥎</button> |
-      <button class="button" data-action="signOut">Sign Out ⛔</button>
+      <button class="button" data-action="authenticate" data-wallet="metaMask">Authenticate by MetaMask ⚽</button> |
+      <button class="button" data-action="authenticate" data-wallet="walletConnect">
+        Authenticate by WalletConnect ⚾
+      </button>
+      |
+      <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
+    </p>
+
+    <h4>Connect</h4>
+
+    <p>
+      <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
+      <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
+      <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
+    </p>
+
+    <p>
+      <button class="button" data-action="logOut">Log Out ⛔</button>
     </p>
   </body>
 </html>
