feat: add magiclink connector support in auth module

--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -36,7 +36,7 @@
     </p>
 
     <p>
-      🏦 Ballance:
+      🏦 Balance:
       <strong id="userBalance"></strong>
     </p>
 
@@ -48,6 +48,10 @@
         Authenticate by WalletConnect ⚾
       </button>
       |
+      <button class="button" data-action="authenticate" data-wallet="magicLink">
+          Authenticate by MagicLink 🏐
+      </button>
+      |
       <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
     </p>
 
@@ -56,6 +60,7 @@
     <p>
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
       <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
+      <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
 
