--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -48,9 +48,7 @@
         Authenticate by WalletConnect ⚾
       </button>
       |
-      <button class="button" data-action="authenticate" data-wallet="magicLink">
-          Authenticate by MagicLink 🏐
-      </button>
+      <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
       |
       <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
     </p>
