fix: magiclink connector fixes including typing and dynamic hiding of its buttons if not used

--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -42,23 +42,20 @@
 
     <h4>Authenticate</h4>
 
-    <p>
+    <p id="authenticate">
       <button class="button" data-action="authenticate" data-wallet="metaMask">Authenticate by MetaMask ⚽</button> |
       <button class="button" data-action="authenticate" data-wallet="walletConnect">
         Authenticate by WalletConnect ⚾
       </button>
-      |
-      <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
       |
       <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
     </p>
 
     <h4>Connect</h4>
 
-    <p>
+    <p id="connect">
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
       <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
-      <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
 
