feat: .env file support in webpack demo add react demo (similar to webpack one but can use debugger)

--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -7,7 +7,7 @@
       document.write(`<script src="../lib/main.js?_=${salt}"><\/script>`);
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>🦊 Simple Webpack Page</title>
+    <title>🔒 Simple Webpack Page with Auth</title>
 
     <style>
       body {
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>🦊 Simple Webpack Page</h1>
+    <h1>🔒 Simple Webpack Page with Auth</h1>
 
     <p>
       👨‍🦱 Current user:
