feat: - add wallet connect v2 connector for moralis client auth - add listeners to wallet disconnection in connectors whenever supported

--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -45,7 +45,11 @@
     <p id="authenticate">
       <button class="button" data-action="authenticate" data-wallet="metaMask">Authenticate by MetaMask ⚽</button> |
       <button class="button" data-action="authenticate" data-wallet="walletConnect">
-        Authenticate by WalletConnect ⚾
+        Authenticate by WalletConnect V1 ⚾
+      </button>
+      |
+      <button class="button" data-action="authenticate" data-wallet="walletConnect2">
+          Authenticate by WalletConnect V2 🏀
       </button>
       |
       <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
@@ -57,7 +61,8 @@
 
     <p id="connect">
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
-      <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
+      <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect V1 ⚾</button> |
+      <button class="button" data-action="connect" data-wallet="walletConnect2">Connect by WalletConnect V2 🏀</button> |
       <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
