--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -49,7 +49,7 @@
       </button>
       |
       <button class="button" data-action="authenticate" data-wallet="walletConnect2">
-          Authenticate by WalletConnect V2 🏀
+        Authenticate by WalletConnect V2 🏀
       </button>
       |
       <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
@@ -62,8 +62,8 @@
     <p id="connect">
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
       <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect V1 ⚾</button> |
-      <button class="button" data-action="connect" data-wallet="walletConnect2">Connect by WalletConnect V2 🏀</button> |
-      <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
+      <button class="button" data-action="connect" data-wallet="walletConnect2">Connect by WalletConnect V2 🏀</button>
+      | <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
 
