--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -50,6 +50,10 @@
       |
       <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
       |
+      <button class="button" data-action="authenticate" data-wallet="web3Auth">Authenticate by Web3Auth 🏉</button>
+      |
+      <button class="button" data-action="authenticate" data-wallet="0xSequence">Authenticate by 0xSequence 🏈</button>
+      |
       <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
     </p>
 
@@ -59,6 +63,8 @@
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
       <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
       <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
+      <button class="button" data-action="connect" data-wallet="web3Auth">Connect by Web3Auth 🏉</button> |
+      <button class="button" data-action="connect" data-wallet="0xSequence">Connect by 0xSequence 🏈</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
 
