feat: add support for dynamically adding connectors and a connector for any eip1193 provider

--- a/demos/webpack/public/index.html
+++ b/demos/webpack/public/index.html
@@ -48,6 +48,10 @@
         Authenticate by WalletConnect ⚾
       </button>
       |
+      <button class="button" data-action="authenticate" data-wallet="EIP1193">
+          Authenticate by EIP1193 using WC 🏉
+      </button>
+      |
       <button class="button" data-action="authenticate" data-wallet="magicLink">Authenticate by MagicLink 🏐</button>
       |
       <button class="button" data-action="authenticate" data-wallet="phantom">Authenticate by Phantom 🥎</button>
@@ -58,6 +62,7 @@
     <p id="connect">
       <button class="button" data-action="connect" data-wallet="metaMask">Connect by MetaMask ⚽</button> |
       <button class="button" data-action="connect" data-wallet="walletConnect">Connect by WalletConnect ⚾</button> |
+      <button class="button" data-action="connect" data-wallet="EIP1193">Connect by EIP1193 using WC 🏉</button> |
       <button class="button" data-action="connect" data-wallet="magicLink">Connect by MagicLink 🏐</button> |
       <button class="button" data-action="connect" data-wallet="phantom">Connect by Phantom 🥎</button>
     </p>
