fix: revert umd external dependencies

--- a/demos/client-umd/index.html
+++ b/demos/client-umd/index.html
@@ -6,17 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 
-    <!-- Import dependency: Solana web3 -->
-    <script defer src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
-
-    <!-- Import dependency: Ethers -->
-    <script defer src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js" type="text/javascript"></script>
-
     <!-- Import Moralis -->
     <!-- TODO: Use the published moralis.min.js file once it's uploaded -->
     <script defer type="text/javascript" src="../../packages/moralis/dist/moralis.min.js"></script>
 
-    <!-- Make sure to load the local script after all dependencies (Moralis, Ethers, Solana) are loaded -->
+    <!-- Make sure to load the local script after the Moralis dependency is loaded -->
     <script defer type="text/javascript" src="scripts.js"></script>
 
     <link rel="stylesheet" href="style.css" />
